--- a/index.html
+++ b/index.html
@@ -7,7 +7,238 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* AI Assistant Styling */
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        nav ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            list-style: none;
+            background-color: #333;
+            padding: 10px;
+        }
+
+        nav ul li {
+            margin: 5px 10px;
+        }
+
+        nav ul li a, .title-btn {
+            text-decoration: none;
+            color: #fff;
+            padding: 10px 15px;
+            border-radius: 5px;
+        }
+
+        nav ul li a:hover, .title-btn:hover {
+            background-color: #555;
+        }
+
+        nav .dropdown {
+            position: relative;
+        }
+
+        nav .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #444;
+            padding: 10px;
+            border-radius: 5px;
+            top: 40px;
+            left: 0;
+        }
+
+        nav .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        nav .dropdown-content a {
+            color: #fff;
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        nav .dropdown-content a:hover {
+            color: #f5d107;
+        }
+
+        #search-bar-container {
+            margin: 10px;
+            text-align: center;
+        }
+
+        #search-bar {
+            width: 80%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .post-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .post-card {
+            width: calc(33.333% - 20px);
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            overflow: hidden;
+            text-align: center;
+            transition: transform 0.3s;
+        }
+
+        .post-card img {
+            width: 100%;
+            height: auto;
+        }
+
+        .post-card h3 {
+            margin: 10px 0;
+        }
+
+        .post-card p {
+            margin: 10px;
+            color: #666;
+        }
+
+        .post-card a {
+            text-decoration: none;
+            color: #fff;
+            background-color: #007bff;
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+
+        .post-card a:hover {
+            background-color: #0056b3;
+        }
+
+        .load-more-container {
+            text-align: center;
+            margin: 20px;
+        }
+
+        .load-more-btn {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .load-more-btn:hover {
+            background-color: #0056b3;
+        }
+
+        footer {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        font-size: 14px;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .footer-column {
+        flex: 1;
+        min-width: 200px;
+    }
+
+    .footer-column h3 {
+        margin-bottom: 10px;
+        font-size: 18px;
+        border-bottom: 2px solid #f5d107;
+        display: inline-block;
+        padding-bottom: 5px;
+    }
+
+    .footer-column p {
+        margin-bottom: 10px;
+        line-height: 1.6;
+    }
+
+    .footer-column ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    .footer-column ul li {
+        margin-bottom: 5px;
+    }
+
+    .footer-column ul li a {
+        text-decoration: none;
+        color: #f5d107;
+    }
+
+    .footer-column ul li a:hover {
+        color: #fff;
+    }
+
+    .social-links a {
+        text-decoration: none;
+        color: #f5d107;
+        margin: 5px 0;
+        display: inline-block;
+    }
+
+    .social-links a:hover {
+        color: #fff;
+    }
+
+    .social-links i {
+        margin-right: 8px;
+    }
+
+    .footer-bottom {
+        text-align: center;
+        margin-top: 20px;
+        border-top: 1px solid #555;
+        padding-top: 10px;
+    }
+
+    .footer-bottom a {
+        color: #f5d107;
+        text-decoration: none;
+    }
+
+    .footer-bottom a:hover {
+        color: #fff;
+    }
+
+    /* Responsive Footer */
+    @media (max-width: 768px) {
+        .footer-container {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer-column {
+            text-align: center;
+        }
+    }
+
         #assistant-container {
             position: fixed;
             bottom: 20px;
@@ -30,7 +261,7 @@
         #assistant-menu {
             display: none;
             position: absolute;
-            bottom: 60px; /* Adjusted to appear above the icon */
+            bottom: 60px;
             right: 0;
             background-color: #fad1d1;
             border-radius: 8px;
@@ -39,38 +270,49 @@
             width: 200px;
         }
 
-        #assistant-menu h3 {
-            font-size: 16px;
-            color: #0d0d0e;
-            margin-bottom: 10px;
-        }
-
         #assistant-menu ul {
-            list-style-type: none;
+            list-style: none;
             padding: 0;
-        }
-
-        #assistant-menu ul li {
-            margin-bottom: 10px;
         }
 
         #assistant-menu ul li a {
             text-decoration: none;
             color: #141414;
             font-weight: bold;
-            font-size: 14px;
-            transition: color 0.3s;
-        }
-
-        #assistant-menu ul li a:hover {
-            color: #f5d107;
-        }
-
-        /* Show the assistant menu when the icon is clicked */
-        #assistant-container.show-menu #assistant-menu {
             display: block;
+            margin-bottom: 10px;
         }
-    
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .post-card {
+                width: calc(50% - 20px);
+            }
+
+            nav ul {
+                flex-direction: column;
+            }
+
+            nav ul li {
+                text-align: center;
+                margin: 5px 0;
+            }
+
+            #search-bar {
+                width: 90%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .post-card {
+                width: calc(100% - 20px);
+            }
+
+            footer .footer-container {
+                flex-direction: column;
+                text-align: center;
+            }
+        }
     </style>
 </head>
 <body> 
