--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevTechi - Blog</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     /* General Reset */
     * {
@@ -23,7 +23,6 @@
     /* Header Section */
     .header {
       background: linear-gradient(135deg, #ffffff, #f8f8f8);
-      color: white;
       padding: 20px 0;
       position: sticky;
       top: 0;
@@ -37,9 +36,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-wrap: wrap;
     }
 
-    /* Title with box animation */
     .header-title {
       font-size: 24px;
       font-weight: bold;
@@ -48,32 +47,20 @@
       padding: 10px 20px;
       border-radius: 12px;
       margin-right: 20px;
-      cursor: default;
-      animation: boxEffect 2s infinite;
+      margin-bottom: 10px;
     }
 
-    @keyframes boxEffect {
-      0%, 100% {
-        box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.2), -8px -8px 15px rgba(255, 255, 255, 0.1);
-      }
-      50% {
-        box-shadow: 8px 8px 25px rgba(0, 0, 0, 0.4), -8px -8px 25px rgba(255, 255, 255, 0.3);
-      }
-    }
-
-    /* Navbar with line effect */
     .navbar ul {
       list-style: none;
       display: flex;
-      gap: 40px;
-      align-items: center;
-      margin: 0;
+      gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     .navbar ul li {
       font-size: 18px;
       font-weight: bold;
-      position: relative;
     }
 
     .navbar ul li a {
@@ -81,25 +68,6 @@
       text-decoration: none;
       padding: 5px 10px;
       transition: all 0.3s ease;
-    }
-
-    .navbar ul li::after {
-      content: "";
-      position: absolute;
-      width: 0;
-      height: 2px;
-      background-color: #ffd700;
-      bottom: -5px;
-      left: 0;
-      transition: width 0.3s ease-in-out;
-    }
-
-    .navbar ul li:hover::after {
-      width: 100%;
-    }
-
-    .navbar ul li a:hover {
-      color: #ffd700;
     }
 
     /* Blog Section */
@@ -123,181 +91,252 @@
     }
 
     .blog-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      background-color: #ffffff;
+      box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
       overflow: hidden;
-      transition: transform 0.3s ease;
-    }
-
-    .blog-card:hover {
-      transform: scale(1.03);
     }
 
     .blog-card img {
       width: 100%;
-      height: 180px;
+      height: 200px;
       object-fit: cover;
     }
 
     .blog-card-content {
-      padding: 15px;
+      padding: 20px;
     }
 
-    .blog-card h3 {
-      font-size: 20px;
+    .blog-card-content h3 {
+      font-size: 22px;
       margin-bottom: 10px;
-      color: #333;
     }
 
-    .blog-card p {
-      font-size: 14px;
-      color: #666;
+    .blog-card-content p {
+      font-size: 16px;
+      color: #555;
       margin-bottom: 15px;
     }
 
-    .blog-card a {
+    .blog-card-content a {
       text-decoration: none;
       color: #0072cc;
       font-weight: bold;
+      transition: color 0.3s ease;
     }
 
-    .blog-card a:hover {
-      text-decoration: underline;
+    .blog-card-content a:hover {
+      color: #0056a3;
+    }
+    .load-more-container {
+            text-align: center;
+            margin: 20px;
+        }
+
+        .load-more-btn {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .load-more-btn:hover {
+            background-color: #0056b3;
+        }
+    /* Footer */
+    footer {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        font-size: 14px;
     }
 
-    /* General Footer Styling */
-.footer {
-    background: linear-gradient(135deg, #1e1e1e, #444444);
-    color: #ffffff;
-    padding: 50px 20px;
-    font-family: 'Arial', sans-serif;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
-  }
-  
-  .footer-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    max-width: 1200px;
-    margin: auto;
-  }
-  
-  .footer-column {
-    padding: 10px;
-  }
-  
-  .footer-logo {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
-  }
-  
-  .footer-logo-img {
-    width: 120px; /* Adjust the size as needed */
-    margin-bottom: 10px;
-  }
-  
-  .footer-column h3 {
-    font-size: 20px;
-    margin-bottom: 15px;
-    text-transform: uppercase;
-    border-bottom: 2px solid #ffd700;
-    display: inline-block;
-    color: #ffd700; /* Gold color */
-  }
-  
-  .footer-column p {
-    font-size: 14px;
-    line-height: 1.6;
-    margin-bottom: 10px;
-    color: #d9d9d9;
-  }
-  
-  .footer-column a {
-    text-decoration: none;
-    color: #ffd700;
-    transition: color 0.3s;
-  }
-  
-  .footer-column a:hover {
-    color: #ffffff;
-  }
-  
-  .footer-column ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-column ul li {
-    margin-bottom: 10px;
-  }
-  
-  .social-links {
-    display: flex;
-    gap: 15px;
-    margin-top: 10px;
-  }
-  
-  .social-links a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: #333333;
-    border-radius: 50%;
-    color: #ffd700;
-    font-size: 18px;
-    transition: all 0.3s;
-  }
-  
-  .social-links a:hover {
-    background: #ffd700;
-    color: #1e1e1e;
-  }
-  
-  .footer-bottom {
-    text-align: center;
-    padding: 15px;
-    background: #333333;
-    border-top: 1px solid #555555;
-    color: #d9d9d9;
-  }
-  
-  .footer-bottom p {
-    font-size: 14px;
-    margin: 0;
-    line-height: 1.5;
-  }
-  
-  .footer-bottom p a {
-    color: #ffd700;
-    text-decoration: none;
-  }
-  
-  .footer-bottom p a:hover {
-    color: #ffffff;
-  }
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .footer-column {
+        flex: 1;
+        min-width: 200px;
+    }
+
+    .footer-column h3 {
+        margin-bottom: 10px;
+        font-size: 18px;
+        border-bottom: 2px solid #f5d107;
+        display: inline-block;
+        padding-bottom: 5px;
+    }
+
+    .footer-column p {
+        margin-bottom: 10px;
+        line-height: 1.6;
+    }
+
+    .footer-column ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    .footer-column ul li {
+        margin-bottom: 5px;
+    }
+
+    .footer-column ul li a {
+        text-decoration: none;
+        color: #f5d107;
+    }
+
+    .footer-column ul li a:hover {
+        color: #fff;
+    }
+
+    .social-links a {
+        text-decoration: none;
+        color: #f5d107;
+        margin: 5px 0;
+        display: inline-block;
+    }
+
+    .social-links a:hover {
+        color: #fff;
+    }
+
+    .social-links i {
+        margin-right: 8px;
+    }
+
+    .footer-bottom {
+        text-align: center;
+        margin-top: 20px;
+        border-top: 1px solid #555;
+        padding-top: 10px;
+    }
+
+    .footer-bottom a {
+        color: #f5d107;
+        text-decoration: none;
+    }
+
+    .footer-bottom a:hover {
+        color: #fff;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .header-container {
+        flex-direction: column;
+      }
+
+      .header-title {
+        margin-right: 0;
+        font-size: 20px;
+      }
+
+      .navbar ul {
+        gap: 15px;
+      }
+
+      .navbar ul li {
+        font-size: 16px;
+      }
+
+      .blog-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .footer-container {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+
+      .footer-column h3 {
+        text-align: center;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .header-title {
+        font-size: 18px;
+        padding: 8px 15px;
+      }
+
+      .navbar ul {
+        gap: 10px;
+      }
+
+      .navbar ul li {
+        font-size: 14px;
+      }
+
+      .blog-section h2 {
+        font-size: 28px;
+      }
+
+      .footer {
+        padding: 30px 10px;
+      }
+    }
+    /* Responsive Footer */
+    @media (max-width: 768px) {
+        .footer-container {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer-column {
+            text-align: center;
+        }
+    }
   </style>
 </head>
 <body>
 
   <!-- Header Section -->
-  <header class="header">
-    <div class="header-container">
-      <div class="header-title">DevTechi</div>
-      <nav class="navbar">
+  <header>
+    <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Categories</a></li>
-          <li><a href="con">Contact Us</a></li>
+            <li><button class="title-btn">DevTechi</button></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li class="dropdown">
+                <a href="#">DevOps</a>
+                <div class="dropdown-content">
+                    <a href="#">Automation Tools</a>
+                    <a href="#">New Technology</a>
+                    <a href="#">Security</a>
+                    <a href="#">DevOps Top Questions</a>
+                    <a href="#">Interview Questions</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="#">Cloud</a>
+                <div class="dropdown-content">
+                    <a href="#">Private Cloud</a>
+                    <a href="#">Public Cloud</a>
+                    <a href="#">Cloud Top Companies</a>
+                    <a href="#">Cloud-Based Projects</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="#">Internship Sites</a>
+                <div class="dropdown-content">
+                    <a href="#">Geeks of Geeks</a>
+                    <a href="#">Internshala</a>
+                    <a href="#">Udemy</a>
+                    <a href="#">Unacademy</a>
+                </div>
+            </li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <li><button id="search-btn" onclick="toggleSearchBar()">🔍</button></li>
         </ul>
-      </nav>
-    </div>
-  </header>
+    </nav>
+</header>
 
   <!-- Blog Section -->
   <section class="blog-section">
@@ -330,22 +369,25 @@
     </div>
   </section>
 
-  <!-- Footer Section -->
-  <footer class="footer">
-    <div class="footer-container">
-      <!-- Logo Section -->
-      <div class="footer-column footer-logo">
-        <img src="logo.png" alt="Downloadnotes Logo" class="footer-logo-img" />
-        <p>Your trusted partner for premium educational resources.</p>
-      </div>
-  
-      <!-- About Section -->
-      <div class="footer-column">
-        <h3>About Us</h3>
-        <p>
-          Welcome to DevTechi, your trusted source for premium educational resources. We aim to make learning accessible and effective for everyone.
-        </p>
-      </div>
+  <!-- Load More Button -->
+<div class="load-more-container">
+  <button id="load-more-btn" class="load-more-btn">Load More</button>
+</div>
+<footer class="footer">
+  <div class="footer-container">
+    <!-- Logo Section -->
+    <div class="footer-column footer-logo">
+      <img src="logo.png" alt="Downloadnotes Logo" class="footer-logo-img" />
+      <p>Your trusted partner for premium educational resources.</p>
+    </div>
+
+    <!-- About Section -->
+    <div class="footer-column">
+      <h3>About Us</h3>
+      <p>
+        Welcome to DevTechi, your trusted source for premium educational resources. We aim to make learning accessible and effective for everyone.
+      </p>
+    </div>
   
       <!-- Quick Links Section -->
       <div class="footer-column">
@@ -376,5 +418,12 @@
     </div>
   </footer>
 
+<script>
+    function toggleSearchBar() {
+        document.getElementById('search-bar-container').classList.toggle('hidden');
+    }
+</script>
+
+<script src="script.js"></script>
 </body>
 </html>
