--- a/contactus.html
+++ b/contactus.html
@@ -1,314 +1,285 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - DevTechi</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Global Styles */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #1a202c;
-            color: #f7fafc;
-            margin: 0;
-            padding: 0;
-            height: 100vh; /* Ensure the body takes the full viewport height */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column; /* Stack content vertically */
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Global styles */
+    body, html {
+      font-family: 'Roboto', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #2d2f34, #1a1c20);
+      color: #ffffff;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
 
-        .contact-form-container {
-            background-color: #4a5568;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 500px;
-        }
+    /* Main container for the page content */
+    .main-container {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
 
-        .contact-form-container h1 {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-            color: #edf2f7;
-            text-align: center;
-        }
+    /* Contact form container */
+    .contact-form-container {
+      background: #1a1c20;
+      border-radius: 15px;
+      padding: 20px 30px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
 
-        .contact-form-container p {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #cbd5e0;
-        }
+    .contact-form-container h1 {
+      font-size: 24px;
+      text-align: center;
+      color: #42b883;
+      margin-bottom: 20px;
+    }
 
-        .contact-form-container label {
-            color: #cbd5e0;
-            font-weight: 600;
-            margin-bottom: 8px;
-            display: block;
-        }
+    .contact-form-container label {
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      margin-bottom: 5px;
+      color: #ffffff;
+    }
 
-        .contact-form-container input,
-        .contact-form-container textarea,
-        .contact-form-container button {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #2d3748;
-            border-radius: 6px;
-            background-color: #edf2f7;
-            color: #2d3748;
-            font-size: 1rem;
-            margin-bottom: 16px;
-            outline: none;
-        }
+    .contact-form-container label i {
+      margin-right: 10px;
+      color: #42b883;
+    }
 
-        .contact-form-container input:focus,
-        .contact-form-container textarea:focus {
-            border-color: #3182ce;
-        }
+    .contact-form-container input,
+    .contact-form-container textarea {
+      width: 100%;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 8px;
+      color: #ffffff;
+      padding: 10px;
+      margin-bottom: 20px;
+      font-size: 14px;
+      outline: none;
+      transition: border 0.3s ease;
+    }
 
-        .contact-form-container button {
-            background-color: #3182ce;
-            color: white;
-            font-weight: 600;
-            cursor: pointer;
-        }
+    .contact-form-container input:focus,
+    .contact-form-container textarea:focus {
+      border: 1px solid #42b883;
+    }
 
-        .contact-form-container button:hover {
-            background-color: #2b6cb0;
-        }
+    .contact-form-container textarea {
+      resize: none;
+      height: 100px;
+    }
 
-        .contact-form-container button:active {
-            background-color: #2b6cb0;
-            transform: scale(0.98);
-        }
+    .checkbox-container {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+    }
 
-        .contact-form-container .result {
-            text-align: center;
-            color: #38a169;
-            font-size: 1rem;
-            display: none;
-        }
+    .checkbox-container input {
+      margin-right: 10px;
+      transform: scale(1.2);
+    }
 
-        .contact-form-container .error {
-            text-align: center;
-            color: #e53e3e;
-            font-size: 1rem;
-            display: none;
-        }
+    .contact-form-container button {
+      width: 100%;
+      background: #42b883;
+      color: #ffffff;
+      border: none;
+      border-radius: 8px;
+      padding: 12px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
 
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            font-size: 14px;
-        }
+    .contact-form-container button:hover {
+      background: #36a176;
+    }
 
+    footer {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        font-size: 14px;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .footer-column {
+        flex: 1;
+        min-width: 200px;
+    }
+
+    .footer-column h3 {
+        margin-bottom: 10px;
+        font-size: 18px;
+        border-bottom: 2px solid #f5d107;
+        display: inline-block;
+        padding-bottom: 5px;
+    }
+
+    .footer-column p {
+        margin-bottom: 10px;
+        line-height: 1.6;
+    }
+
+    .footer-column ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    .footer-column ul li {
+        margin-bottom: 5px;
+    }
+
+    .footer-column ul li a {
+        text-decoration: none;
+        color: #f5d107;
+    }
+
+    .footer-column ul li a:hover {
+        color: #fff;
+    }
+
+    .social-links a {
+        text-decoration: none;
+        color: #f5d107;
+        margin: 5px 0;
+        display: inline-block;
+    }
+
+    .social-links a:hover {
+        color: #fff;
+    }
+
+    .social-links i {
+        margin-right: 8px;
+    }
+
+    .footer-bottom {
+        text-align: center;
+        margin-top: 20px;
+        border-top: 1px solid #555;
+        padding-top: 10px;
+    }
+
+    .footer-bottom a {
+        color: #f5d107;
+        text-decoration: none;
+    }
+
+    .footer-bottom a:hover {
+        color: #fff;
+    }
+
+    /* Responsive Footer */
+    @media (max-width: 768px) {
         .footer-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            gap: 20px;
+            flex-direction: column;
+            align-items: center;
         }
 
         .footer-column {
-            flex: 1;
-            min-width: 200px;
-        }
-
-        .footer-column h3 {
-            margin-bottom: 10px;
-            font-size: 18px;
-            border-bottom: 2px solid #f5d107;
-            display: inline-block;
-            padding-bottom: 5px;
-        }
-
-        .footer-column p {
-            margin-bottom: 10px;
-            line-height: 1.6;
-        }
-
-        .footer-column ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .footer-column ul li {
-            margin-bottom: 5px;
-        }
-
-        .footer-column ul li a {
-            text-decoration: none;
-            color: #f5d107;
-        }
-
-        .footer-column ul li a:hover {
-            color: #fff;
-        }
-
-        .social-links a {
-            text-decoration: none;
-            color: #f5d107;
-            margin: 5px 0;
-            display: inline-block;
-        }
-
-        .social-links a:hover {
-            color: #fff;
-        }
-
-        .social-links i {
-            margin-right: 8px;
-        }
-
-        .footer-bottom {
             text-align: center;
-            margin-top: 20px;
-            border-top: 1px solid #555;
-            padding-top: 10px;
         }
-
-        .footer-bottom a {
-            color: #f5d107;
-            text-decoration: none;
-        }
-
-        .footer-bottom a:hover {
-            color: #fff;
-        }
-
-        /* Responsive Styles */
-        @media (max-width: 768px) {
-            .contact-form-container {
-                padding: 20px;
+    }
+    @media (max-width: 480px) {
+            .post-card {
+                width: calc(100% - 20px);
             }
 
-            .footer-container {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .footer-column {
-                text-align: center;
-                margin-bottom: 20px;
-            }
-
-            .footer-column ul {
-                padding-left: 0;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .contact-form-container h1 {
-                font-size: 2rem;
-            }
-
-            .contact-form-container input,
-            .contact-form-container textarea,
-            .contact-form-container button {
-                padding: 10px;
-            }
-
-            .footer-container {
+            footer .footer-container {
                 flex-direction: column;
                 text-align: center;
             }
-
-            .footer-column {
-                text-align: center;
-                margin-bottom: 20px;
-            }
-
-            footer {
-                font-size: 12px;
-                padding: 15px;
-            }
         }
-    </style>
+  </style>
 </head>
-
 <body>
+  <div class="main-container">
     <div class="contact-form-container">
-        <h1>Contact Us</h1>
-        <form action="https://api.web3forms.com/submit" method="POST" id="contact-form">
-            <!-- Web3Forms Access Key -->
-            <input type="hidden" name="access_key" value="38bc726e-803d-4171-af7f-d51998a88ff0">
-
-            <div class="input-field">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" required placeholder="Your Name">
-            </div>
-
-            <div class="input-field">
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" required placeholder="you@example.com">
-            </div>
-
-            <div class="input-field">
-                <label for="phone">Phone Number</label>
-                <input type="text" id="phone" name="phone" required placeholder="+1 (555) 1234-567">
-            </div>
-
-            <div class="input-field">
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="5" required placeholder="Your message..."></textarea>
-            </div>
-
-            <button type="submit" class="submit-btn">Send Message</button>
-
-            <!-- Success/Error message -->
-            <p class="result" id="result" style="display:none;">Your message has been sent successfully!</p>
-            <p class="error" id="error" style="display:none;">Oops! Something went wrong. Please try again.</p>
-        </form>
+      <h1><i class="fas fa-envelope"></i> Get in Touch</h1>
+      <form action="https://api.web3forms.com/submit" method="POST">
+        <input type="hidden" name="access_key" value="38bc726e-803d-4171-af7f-d51998a88ff0">
+        <label for="name"><i class="fas fa-user"></i> Name</label>
+        <input type="text" id="name" name="name" placeholder="Your Name" required>
+        <label for="email"><i class="fas fa-envelope"></i> Email</label>
+        <input type="email" id="email" name="email" placeholder="Your Email" required>
+        <label for="phone"><i class="fas fa-phone"></i> Phone</label>
+        <input type="tel" id="phone" name="phone" placeholder="Your Phone Number" required>
+        <label for="message"><i class="fas fa-comment-dots"></i> Your Message</label>
+        <textarea id="message" name="message" placeholder="Your Message..." required></textarea>
+        <div class="checkbox-container">
+          <input type="checkbox" id="send-copy" name="send-copy">
+          <label for="send-copy">Send a copy to my email</label>
+        </div>
+        <input type="hidden" name="redirect" value="https://web3forms.com/success">
+        <button type="submit"><i class="fas fa-paper-plane"></i> Send Email</button>
+      </form>
     </div>
-
-    <footer class="footer">
-        <div class="footer-container">
-            <!-- Logo Section -->
-            <div class="footer-column footer-logo">
-                <img src="logo.png" alt="Downloadnotes Logo" class="footer-logo-img" />
-                <p>Your trusted partner for premium educational resources.</p>
-            </div>
-
-            <!-- About Section -->
-            <div class="footer-column">
-                <h3>About Us</h3>
-                <p>
-                    Welcome to DevTechi, your trusted source for premium educational resources. We aim to make learning accessible and effective for everyone.
-                </p>
-            </div>
-
-            <!-- Quick Links Section -->
-            <div class="footer-column">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#courses">Courses</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="contactus.html">Contact Us</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                </ul>
-            </div>
-
-            <!-- Social Media Section -->
-            <div class="footer-column">
-                <h3>Follow Us</h3>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                </div>
-            </div>
+  </div>
+  <footer class="footer">
+    <div class="footer-container">
+      <!-- Logo Section -->
+      <div class="footer-column footer-logo">
+        <img src="logo.png" alt="Downloadnotes Logo" class="footer-logo-img" />
+        <p>Your trusted partner for premium educational resources.</p>
+      </div>
+  
+      <!-- About Section -->
+      <div class="footer-column">
+        <h3>About Us</h3>
+        <p>
+          Welcome to DevTechi, your trusted source for premium educational resources. We aim to make learning accessible and effective for everyone.
+        </p>
+      </div>
+    
+        <!-- Quick Links Section -->
+        <div class="footer-column">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#courses">Courses</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="#blog">Blog</a></li>
+          </ul>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 DevTechi. All Rights Reserved. <a href="terms.html">Terms & Conditions</a> | <a href="privacy.html">Privacy Policy</a></p>
+    
+        <!-- Social Media Section -->
+        <div class="footer-column">
+          <h3>Follow Us</h3>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+          </div>
         </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 DevTechi. All Rights Reserved | Designed with ❤️ by DevTechi Team.</p>
+      </div>
     </footer>
 </body>
-
 </html>
