--- a/blog.html
+++ b/blog.html
@@ -422,7 +422,7 @@
       <div class="footer-column">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="#home">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#courses">Courses</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="contactus.html">Contact Us</a></li>
