--- a/intern.html
+++ b/intern.html
@@ -308,6 +308,25 @@
     .footer-bottom a:hover {
         color: #fff;
     }
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+            .post-card {
+                width: calc(50% - 20px);
+            }
+
+            nav ul {
+                flex-direction: column;
+            }
+
+            nav ul li {
+                text-align: center;
+                margin: 5px 0;
+            }
+
+            #search-bar {
+                width: 90%;
+            }
+        }
 
     /* Responsive Footer */
     @media (max-width: 768px) {
