--- a/intern.html
+++ b/intern.html
@@ -429,7 +429,7 @@
 
     <!-- Unacademy -->
     <div class="platform-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Unacademy_Logo.svg" alt="Unacademy Logo">
+      <img src="unacademy.jpg" alt="Unacademy Logo">
       <div class="platform-content">
         <h2>Unacademy</h2>
         <p>Unacademy focuses on education and preparation for competitive exams, but it also has opportunities for internships related to content creation, video editing, and tutoring.</p>
