--- a/intern.html
+++ b/intern.html
@@ -407,7 +407,7 @@
 
     <!-- Internshala -->
     <div class="platform-card">
-      <img src="https://internshala.com/favicon.ico" alt="Internshala Logo">
+      <img src="internshala.jpg" alt="Internshala Logo">
       <div class="platform-content">
         <h2>Internshala</h2>
         <p>Internshala is one of the largest platforms for finding internships across various domains like marketing, content writing, programming, and more. It’s beginner-friendly and provides training programs as well.</p>
