--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <h3>Quick Links</h3>
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#courses">Courses</a></li>
+          <li><a href="course.html">Courses</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="contactus.html">Contact Us</a></li>
           <li><a href="#blog">Blog</a></li>
