--- a/course.html
+++ b/course.html
@@ -206,6 +206,26 @@
             text-decoration: underline;
         }
 
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .post-card {
+                width: calc(50% - 20px);
+            }
+
+            nav ul {
+                flex-direction: column;
+            }
+
+            nav ul li {
+                text-align: center;
+                margin: 5px 0;
+            }
+
+            #search-bar {
+                width: 90%;
+            }
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .course-item {
